--- a/Pages/Appointments/Delete.cshtml
+++ b/Pages/Appointments/Delete.cshtml
@@ -22,7 +22,7 @@
             @Html.DisplayNameFor(model => model.Appointment.Client)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Appointment.Client.ClientID)
+            @Html.DisplayFor(model => model.Appointment.Client.LastName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Appointment.Salon)
