--- a/Pages/Appointments/Index.cshtml
+++ b/Pages/Appointments/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.BookingDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Client.ClientID)
+                @Html.DisplayFor(modelItem => item.Client.LastName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Salon.SalonID)
