--- a/Pages/Salons/Create.cshtml
+++ b/Pages/Salons/Create.cshtml
@@ -38,6 +38,15 @@
                 <input asp-for="Salon.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Salon.PhoneNumber" class="text-danger"></span>
             </div>
+            @*<div class="form-group">
+                <label asp-for="Salon.City" class="control-label"></label>
+                <select asp-for="Salon.CityID" class="form-control"
+                        asp-items="@Model.CityNameSL">
+                    <option value="">-- Select Department --</option>
+                </select>
+                <span asp-validation-for="Salon.City" class="text-danger" />
+            </div>*@
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
