--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Clients/Index">Client Report</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Revenue/Index">Revenue Report</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Services/Index">Services Information</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
