--- a/Pages/Salons/Delete.cshtml
+++ b/Pages/Salons/Delete.cshtml
@@ -36,6 +36,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Salon.PhoneNumber)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Salon.CityID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Salon.CityID)
+        </dd>
     </dl>
     
     <form method="post">
