--- a/Pages/Salons/Details.cshtml
+++ b/Pages/Salons/Details.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
 @model SmartBeauty.Pages.Salons.DetailsModel
 
-@{ ViewData["Title"] = "Details"; }
+@{
+    ViewData["Title"] = "Details";
+}
 
 <h1>Details</h1>
 
@@ -15,27 +17,29 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Salon.SalonName)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Salon.Staffs)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Salon.Email)
         </dt>
-
-        <dd>
-            <table class="table">
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                </tr>
-                @foreach (var item in Model.Salon.Staffs)
-                {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstMidName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-    </tr>            }
-            </table>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Salon.Email)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Salon.Address)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Salon.Address)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Salon.PhoneNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Salon.PhoneNumber)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Salon.CityID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Salon.CityID)
         </dd>
     </dl>
 </div>
