--- a/Pages/Salons/Edit.cshtml
+++ b/Pages/Salons/Edit.cshtml
@@ -34,13 +34,11 @@
                 <input asp-for="Salon.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Salon.PhoneNumber" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <label asp-for="Salon.City" class="control-label"></label>
-                <select asp-for="Salon.CityID" class="form-control"
-                        asp-items="@Model.CityNameSL"></select>
+            <div class="form-group">
+                <label asp-for="Salon.CityID" class="control-label"></label>
+                <input asp-for="Salon.CityID" class="form-control" />
                 <span asp-validation-for="Salon.CityID" class="text-danger"></span>
-            </div>*@
-
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
